# rotten

./: .gitignore  Cargo.toml  LICENSE  README.md
gl_test/: Cargo.toml  build.rs
gl_test/src/: cleanup.rs  context.rs  gl_support.rs  glenums.rs  glerror.rs  id.rs  label.rs  lib.rs  memory.rs  resources.rs  shaders.rs
gl_test/src/context/: bindings.rs  clear.rs  info.rs  rect.rs
gl_test/src/glenums/: buffers.rs  clearkind.rs  contextflags.rs  contextprofile.rs  debug.rs  drawmode.rs  enable.rs  geterror.rs  getstring.rs  objects.rs
gl_test/src/memory/: classicbuf.rs  classicvao.rs  gpudata.rs  layout.rs  stateful.rs
gl_test/src/memory/dsa/: buffer.rs
gl_test/src/memory/stateful/: buffer.rs  vao.rs
gl_test/src/resources/: programs.rs
gl_test/src/resources/programs/: rectangle.rs  triangle.rs
gl_test/src/shaders/: datatypes.rs  mod.rs  shader.rs  shaderprogram.rs
gl_test/src/shaders/datatypes/: rectangle.rs  triangle.rs  vertex.rs
src/: main.rs  shader.wgsl
