[package]
name = "rotten"
version = "0.1.0"
authors = ["Josh Megnauth"]
edition = "2021"
repository = "https://github.com/joshuamegnauth54/rotten"
license = "MIT"

[badges]
maintainence = { status = "experimental" }

[features]
gl_debug = ["gl_test/debug"]

[workspace]
members = ["gl_test"]

[dependencies]
image = "0.23"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.7", features = ["derive"] }
gl_test = {path = "gl_test"}
