[package]
name = "gl_test"
version = "0.1.0"
edition = "2021"
build = "build.rs"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
glutin = "0.27"
nalgebra-glm = "0.15.0"
thiserror = "1.0"

[build-dependencies]
gl_generator = "0.14"
# spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }
