[package]
name = "gl_test"
version = "0.3.0"
authors = ["Josh Megnauth"]
edition = "2021"
repository = "https://github.com/joshuamegnauth54/rotten"
license = "MIT"
build = "build.rs"
resolver = "2"

[badges]
maintainence = { status = "experimental" }

[features]
debug = []

[dependencies]
bitflags = "1.3.2"
glutin = "0.27"
image = "0.23"
log = "0.4"
nalgebra-glm = "0.15.0"
thiserror = "1.0"

[build-dependencies]
gl_generator = "0.14"
# spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }
